<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="ACCOUNT_BUTTON_ADD_ACCOUNT">Add account</string>
    <string name="ACCOUNT_HINT_ACCOUNT_NAME">Account name</string>

    <string name="DASHBOARD_HINT_BALANCE">Balance</string>
    <string name="DASHBOARD_HINT_EXPENSES">Expenses</string>
    <string name="DASHBOARD_HINT_INCOME">Income</string>
    <string name="DASHBOARD_MESSAGE_EMPTY_CONTENT">Account was not selected</string>

    <string name="GENERAL_BUTTON_ADD">Add</string>

    <string name="MAIN_TAB_ACCOUNTS">Accounts</string>
    <string name="MAIN_TAB_DASHBOARD">Dashboard</string>
    <string name="MAIN_TAB_TRANSACTIONS">Transactions</string>

    <string name="TRANSACTIONS_MESSAGE_EMPTY_CONTENT">This account does not have transactions</string>

    <string name="TRANSACTION_HINT_AMOUNT">Amount</string>
    <string name="TRANSACTION_HINT_TITLE">Title</string>

    <string name="app_name">AccountingFinance</string>
    <string name="GENERAL_ERROR_NO_AN_ACCOUNT">You do not hove a selected account(</string>
    <string name="GENERAL_ERROR_COMMON">Something went wrong</string>
    <string name="GENERAL_BUTTON_SAVE">Save</string>
</resources>
